# borca

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  gitlab-ci.yml  pyproject.toml  tox.ini
borca/: Orchestrator.py  __init__.py  __main__.py  orchestrator.py
borca/exceptions/: __init__.py  exceptions.py
borca/execution/: __init__.py  executor.py
borca/parsing/: __init__.py  borca_datagram.py  config.py  data_format.py  parser.py
borca/task/: __init__.py  task.py  task_graph.py
borca/util/: __init__.py  logging.py
tests/: test_borca.py  test_graph.py  test_parsing.py
