[tool.poetry]
name = "borca"
version = "0.1.0"
description = ""
authors = ["Andrew Spittlemeister <andrew.spittlemeister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "=0.10.0"

[tool.poetry.dev-dependencies]
pytest = "=5.0.0"
mypy = "=0.711"
bandit = "=1.6.2"
black = "=19.3b0"

[tool.black]
check = true
verbose = true
line-length = 120
diff = true
skip-string-normalization = true

[tool.borca]
default-task = "build"
no-hash = false
verbosity = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
