[tool.poetry]
name = "borca"
version = "0.2.0"
description = "Lightweight task graph execution defined with pyproject.toml files."
authors = ["Andrew Spittlemeister <andrew.spittlemeister@gmail.com>"]

[tool.poetry.scripts]
borca = "borca.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
pydantic = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "=5.0.0"
mypy = "=0.711"
bandit = "=1.6.2"
black = "=19.3b0"

[tool.black]
check = true
verbose = true
line-length = 120
diff = true
skip-string-normalization = true

[tool.borca]
default_task = "build"

[[tool.borca.tasks]]
name = "build"
commands = [
    "poetry build --format wheel"
]
depends_on = [
    "test"
]

[[tool.borca.tasks]]
name = "test"
commands = [
    "pytest"
]
depends_on = [
    "lint",
    "security-check"
]

[[tool.borca.tasks]]
name = "security-check"
commands = [
    "bandit -r borca"
]
depends_on = [
    "lint"
]

[[tool.borca.tasks]]
name = "lint"
commands = [
    "mypy borca",
    "black borca"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
