[tool.poetry]
name = "borca"
version = "2020.2"
authors = ["Andrew Spittlemeister <andrew.spittlemeister@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndrewSpittlemeister/borca"
homepage = "https://github.com/AndrewSpittlemeister/borca"
description = "Lightweight task graph execution defined with pyproject.toml files."
keywords = ["build tool", "task", "tasks", "make"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

include = [
    "LICENSE",
]

[tool.poetry.scripts]
borca = "borca.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
pydantic = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2"
mypy = "^0"
bandit = "^1.6.2"
black = "^19.10b0"
twine = "^3"

[tool.black]
check = true
verbose = true
line-length = 120
diff = true
skip-string-normalization = true

[tool.borca]
default_task = "build"

[[tool.borca.tasks]]
name = "build"
commands = ["poetry build --format wheel"]
depends_on = ["test"]
input_paths = ["./borca/**/*.py", "./tests/**/*.py"]
output_paths = ["./dist/borca-*.whl"]

[[tool.borca.tasks]]
name = "test"
commands = ["pytest -vv --cov=borca"]
depends_on = ["lint", "security-check"]
input_paths = ["./borca/**/*.py", "./tests/**/*.py"]

[[tool.borca.tasks]]
name = "security-check"
commands = ["bandit -r borca"]
input_paths = ["./borca/**/*.py"]
depends_on = ["lint"]

[[tool.borca.tasks]]
name = "lint"
commands = ["mypy borca", "black borca"]
input_paths = ["./borca/**/*.py"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
